@@ -16,7 +16,6 @@
 package sleeper.trino;
 
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import io.trino.sql.query.QueryAssertions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
@@ -57,7 +56,7 @@ public class TpchSchemaPartitionedInsertPartitioningEnabledIT {
                     generateCustomerPartitionBoundaries(),
                     Stream.empty()));
 
-    private static final Map<String, String> EXTRA_PROPERTIES_FOR_QUERY_RUNNER = ImmutableMap.of("task.writer-count", "4");
+    private static final Map<String, String> EXTRA_PROPERTIES_FOR_QUERY_RUNNER = Map.of();
     private static final SleeperConfig SLEEPER_CONFIG = (new SleeperConfig()).setEnableTrinoPartitioning(true);
     @RegisterExtension
     public static final PopulatedSleeperExternalResource POPULATED_SLEEPER_EXTERNAL_RESOURCE = new PopulatedSleeperExternalResource(EXTRA_PROPERTIES_FOR_QUERY_RUNNER, TABLE_DEFINITIONS,
